--- a/manifests/templates/virtual-service.yaml
+++ b/manifests/templates/virtual-service.yaml
@@ -1,20 +1,24 @@
 {{- if .Values.virtualservice.enabled }}
+{{- with .Values.virtualservice.rules }}
+{{- range . }}
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: {{ .Release.Name }}-vs
-  namespace: {{ .Values.virtualservice.namespace }}
+  name: {{ .name }}-vs
+  namespace: {{ .namespace }}
 spec:
   hosts:
-  {{- range .Values.hosts }}
+  {{- range .hosts }}
     - {{ . -}}
   {{ end }}
   gateways:
-    - istio-system/{{ .Release.Name }}-gw
-  {{ with .Values.virtualservice.http }}
+    - istio-system/{{ .gatewayName }}-gw
+  {{ with .http }}
   http: {{-  toYaml . | nindent 3 }} 
   {{- end }}
-  {{ with .Values.virtualservice.tls }}   
+  {{ with .tls }}   
   tls: {{-  toYaml . | nindent 3 }}
   {{- end }}
+{{- end }}
+{{- end }}
 {{- end }}
