--- a/manifests/values.yaml
+++ b/manifests/values.yaml
@@ -1,18 +1,12 @@
-hosts:
-  - mydns.com
+# hosts:
+#   - mydns.com
 
-protocols:
-  http:
-    enabled: true
-    port: 80
-    httpsRedirect: true
-
-  https:
-    enabled: true
-    port: 443
+#   https:
+#     enabled: true
+#     port: 443
 
 tls:
-  enabled: true
+  enabled: false
   mode: SIMPLE
   dnsNames: 
   - mydns.com
@@ -21,33 +15,78 @@ tls:
 destionationrule:
   enabled: false
 
-virtualservice:
-  enabled: true
-
-
 gateway:
   enabled: true
+  rules:
+    - name: test
+      protocols:
+        http:
+          enabled: true
+          port: 80
+          httpsRedirect: true
+        https:
+          enabled: true
+          port: 443
+          tls:
+            mode: SIMPLE
+            dnsNames: 
+            - mydns.com
+            issuerName: "letsencrypt-prod-cluster"
+
+      hosts:
+      - mydns.com
+
 
 virtualservice:
-  enabled: true
-  namespace: "l1-web-deptrack"
+  enabled: false
+  rules:
+    - name: test1
+      gatewayName: test1
+      hosts: 
+      - mydns.com
+      namespace: "l1-web-deptrack"
 
-  http:
-  - match:
-      - uri:
-          prefix: /api
-    route:
-      - destination:
-          host: apiserver
-          port:
-            number: 80
-  - match:
-      - uri:
-          prefix: /
-    route:
-      - destination:
-          host: frontend
-          port:
-            number: 80
-    
-  tls: {}
+      http:
+      - match:
+          - uri:
+              prefix: /api
+        route:
+          - destination:
+              host: apiserver
+              port:
+                number: 80
+      - match:
+          - uri:
+              prefix: /
+        route:
+          - destination:
+              host: frontend
+              port:
+                number: 80
+        
+      tls: {}
+    - name: test
+      gatewayName: test
+      hosts: 
+      - myseconddns.com
+      namespace: "l1-web-deptrack"
+
+      http:
+      - match:
+          - uri:
+              prefix: /api
+        route:
+          - destination:
+              host: apiserver
+              port:
+                number: 80
+      - match:
+          - uri:
+              prefix: /
+        route:
+          - destination:
+              host: frontend
+              port:
+                number: 80
+        
+      tls: {}
